<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="oracle.cloud.mobile.bots.chatsample.LaunchActivity"
    android:weightSum="1"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            android:gravity="center">

            <ImageView
                android:layout_width="500dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:src="@drawable/mobile_cloud_enterprise_2x"
                android:gravity="center"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:hint="@string/titulo"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:layout_margin="10dp"
                android:maxLines="1"
                android:textStyle="bold"
                android:singleLine="true"
                android:gravity="center">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="@string/cloud"
                android:layout_marginBottom="10dp"
                android:maxLines="1"
                android:singleLine="true"
                android:gravity="center">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/launchactivity_text"
                android:textSize="20dp"
                android:layout_margin="10dp"
                android:textAlignment="gravity"
                android:gravity="left"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:hint="@string/welcome"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:layout_marginTop="16dp"
                android:maxLines="1"
                android:textStyle="bold"
                android:singleLine="true"
                android:gravity="center">
            </TextView>

            <Button
                android:id="@+id/chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/chat_with_bot"
                android:layout_margin="16dp"
                android:textAlignment="center"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="200dp"
                android:layout_marginTop="20dp"
                android:layout_height="60dp"
                android:src="@drawable/oracle_logo"
                android:layout_gravity="center_horizontal"
                android:gravity="center"/>
        </LinearLayout>


    </ScrollView>


</LinearLayout>